# codeclaw

./: .dependency-cruiser.cjs  .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.automation/opencode-roadmap/: STEP_AUDIT_SUMMARY.md  state
.automation/opencode-roadmap/logs/: 02-monorepo-structure-fix-attempt-1-prompt.md  07-cli-mvp-fix-attempt-1-prompt.md  (+45 more)
.github/workflows/: ci.yml
apps/cli/: package.json
apps/local-server/: package.json  vitest.config.ts
apps/local-web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/codeclaw-runner/: Cargo.toml
crates/codeclaw-runner/src/: command.rs  errors.rs  git.rs  main.rs  policy.rs  redaction.rs  types.rs
docs/: AI_AGENT_RULES.md  ARCHITECTURE.md  AUDIT_STEPS_00_TO_07.md  CLI_COMMAND_SPEC.md  CODE_QUALITY.md  CONTRIBUTING.md  DEVELOPMENT.md  LOCAL_AI_SOFTWARE_TEAM.md  LOCAL_WEB_UI_SPEC.md  PDF_CONVERSION_REPORT.md  PRD.md  PRODUCTION_READINESS.md  ROADMAP.md  SECURITY.md  TECHNICAL_DESIGN.md  WORKFLOW_DESIGN.md
docs/codegraph/: README.md
scripts/: opencode-roadmap-runner.sh
templates/prompts/: architect-agent.md  ba-agent.md  backend-planner-agent.md  coding-plan-agent.md  developer-agent.md  devops-release-agent.md  frontend-planner-agent.md  integration-planner-agent.md  pm-agent.md  po-agent.md  qa-agent.md  reporter-agent.md  reviewer-agent.md  security-reviewer-agent.md  technical-documentation-agent.md  traceability-agent.md  ui-designer-agent.md  user-journey-agent.md  ux-writer-agent.md
(+510 files in other folders)
