[package]
name = "codeclaw-runner"
version = "0.1.0"
edition = "2021"
description = "Native execution runner for CodeClaw - runs untrusted commands in a sandboxed, policy-controlled environment"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "codeclaw-runner"
path = "src/main.rs"
